<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application name -->
    <string name="app_name">recipeConverter</string>

    <!-- Activity names -->
    <string name="title_activity_main">New recipe</string>
    <string name="title_activity_main2">Edit recipe</string>
    <string name="title_activity_ingredient">Ingredients</string>
    <string name="title_activity_conversion">Conversion</string>
    <string name="title_activity_recipe">Recipes</string>

    <!-- Activity headlines -->
    <string name="headline_activity_main">Recipe info</string>
    <string name="headline_activity_ingredient">Add ingredients</string>
    <string name="headline_activity_conversion">Convert recipe</string>
    <string name="headline_activity_recipe">Your recipes!</string>

    <!-- Splashscreen info -->
    <string name="splashscreen_title">Recipe converter</string>
    <string name="splashscreen_version">1.0</string>

    <!-- Other -->
    <!-- http://www.drawperfect.com/ -->
    <string name="font_handwritten">fonts/Postit-Penscript.otf</string>
    <string name="double_formatting">0.00</string>

    <!-- Toast messages -->
    <string name="toast_internal_error">Something went wrong&#8230; sorry!</string>
    <string name="toast_duplicated_recipe">Name already in use</string>
    <string name="toast_duplicated_ingredient">Ingredient already in use</string>
    <string name="toast_wrong_input">Set all inputs correctly</string>
    <string name="toast_no_sharing">Nothing to share</string>
    <string name="toast_recipe_added">Recipe added successfully</string>
    <string name="toast_recipe_edited">Recipe edited successfully</string>
    <string name="toast_empty_ingredients">Insert at least one ingredient</string>

    <!-- Size units -->
    <string name="str_cm">Centimeter</string>
    <string name="str_in">Inch</string>
    <string name="str_cm_abbr">cm</string>
    <string name="str_in_abbr">in</string>

    <!-- Pan shapres -->
    <string name="str_rect">Rectangle</string>
    <string name="str_squa">Square</string>
    <string name="str_circ">Circle</string>

    <!-- Intent argument identifiers -->
    <string name="intent_id">id</string>
    <string name="intent_name">name</string>
    <string name="intent_people">num_people</string>
    <string name="intent_shape">shape</string>
    <string name="intent_unit">unit</string>
    <string name="intent_side1">side1</string>
    <string name="intent_side2">side2</string>
    <string name="intent_side">side</string>
    <string name="intent_diameter">diameter</string>

    <!-- Text fields -->
    <string name="txt_discard">Discard</string>
    <string name="txt_save">Save</string>
    <string name="txt_search">Search</string>
    <string name="txt_convert">Convert</string>
    <string name="txt_unit">Unit</string>
    <string name="txt_name">Name</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_side">Side</string>
    <string name="txt_size">Size</string>
    <string name="txt_diameter">Diameter</string>
    <string name="txt_how_many_people">How many people</string>
    <string name="txt_pan_shape">Pan shape</string>
    <string name="txt_add_ingredient">Add ingredient</string>
    <string name="txt_add_ingredients">Add ingredients</string>
    <string name="txt_share_it">Share it!</string>
    <string name="txt_add_recipe">Add recipe</string>
    <string name="txt_times">x</string>
    <string name="txt_separator"> - </string>
    <string name="txt_delete">Delete</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_recipe">Recipe</string>
    <string name="txt_for">for</string>
    <string name="txt_people">people</string>
    <string name="txt_share_rectangle">for rectangular pan with size</string>
    <string name="txt_share_square">for squared pan with size</string>
    <string name="txt_share_circle">for circular pan with diameter</string>
    <string name="txt_add_new_recipe">Add new recipe</string>
    <string name="txt_no_recipe_stored">No recipe stored</string>
    <string name="txt_swipe_right">Swipe to edit/delete a recipe</string>

    <!-- Hints -->
    <string name="hint_ingredient_name">Type the ingredient name here!</string>
    <string name="hint_recipe_name">Type the recipe name here!</string>

    <!-- Alert dialog -->
    <string name="dlg_delete_title">Delete recipe</string>
    <string name="dlg_delete_msg">Do you want to delete the recipe?</string>

</resources>
